LBT-7047 Migrate to legal-entity & service-agreement service api v1